fix: Bug where long messages overflow the chat window

--- a/public/stylesheets/game.css
+++ b/public/stylesheets/game.css
@@ -71,12 +71,16 @@ button {
     align-self: flex-start;
     padding: 5px;
     font-family: "Clarendon-Regular";
+    width: 150px;
+    word-wrap: break-word;
 }
 
 .enemy_message {
     align-self: flex-end;
     padding: 5px;
     font-family: "Clarendon-Regular";
+    width: 150px;
+    word-wrap: break-word;
 }
 
 article {
